Minor fix in detach control vertical alignment

--- a/css/cb.css
+++ b/css/cb.css
@@ -308,6 +308,10 @@ img.embed {
     background-color: white;
 }
 
+a.detach {
+    margin-top: 5px !important;
+}
+
 img.reset: hover, 
 img.detach: hover, 
 img.embed: hover {
